@@ -198,13 +198,11 @@ setup_threads (void)
   pthread_t thread;
   l4_thread_id_t server_thread;
   l4_thread_id_t main_thread;
+  l4_word_t extra_threads;
 
-
-  /* FIXME: Retrieve threads donated by wortel here.  */
   {
     l4_msg_t msg;
     l4_msg_tag_t tag;
-    l4_word_t nr;
 
     l4_accept (L4_UNTYPED_WORDS_ACCEPTOR);
 
@@ -227,20 +225,12 @@ setup_threads (void)
       panic ("invalid format of wortel get_thread reply");
 
     l4_msg_store (tag, msg);
-    l4_msg_get_word (msg, 0, &nr);
-    if (nr < 3)
+    l4_msg_get_word (msg, 0, &extra_threads);
+    if (extra_threads < 3)
       panic ("at least three extra threads required for physmem");
-
-    while (--nr > 0)
-      {
-	l4_thread_id_t tid;
-	tid = l4_global_id (l4_thread_no (l4_my_global_id ()) + 1 + nr,
-			    l4_version (l4_my_global_id ()));
-	pthread_pool_add_np (tid);
-      }
   }
 
-  /* For now, we know wortel creates one additional thread up-front.  */
+  /* Use the first extra thread as main thread.  */
   main_thread = l4_global_id (l4_thread_no (l4_my_global_id ()) + 1,
 			      l4_version (l4_my_global_id ()));
   server_thread = l4_my_global_id ();
@@ -256,12 +246,16 @@ setup_threads (void)
   if (err)
     panic ("could not create main thread: %i\n", err);
 
-  /* FIXME: Add all threads provided by wortel, except the server thread,
-     to the pool.  */
+  /* Now add the remaining extra threads to the pool.  */
+  while (--extra_threads > 0)
+    {
+      l4_thread_id_t tid;
+      tid = l4_global_id (l4_thread_no (l4_my_global_id ()) + 1
+			  + extra_threads,
+			  l4_version (l4_my_global_id ()));
+      pthread_pool_add_np (tid);
+    }
 
-  /* The server thread has a thread number that is one higher than our.  */
-  server_thread = l4_global_id (l4_thread_no (l4_my_global_id ()) + 1,
-				l4_version (l4_my_global_id ()));
   return server_thread;
 }
 
